--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 env/
-.env
+
 .idea/
 __pycache__/
 *.py[cod]
@@ -8,3 +8,6 @@ __pycache__/
 .DS_Store  
 .AppleDouble  
 .LSOverride
+
+.env
+.env*.local
